infrastructure/base/alertmanager/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  description: "Alertmanager: Prometheus pushes alerts to it, Slack is the only way out."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/component: server
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: grafana
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: "hooks.slack.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
